AzureResourceGroup1/azuredeploy.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "loadBalancers_alb_name": {
      "defaultValue": "alb",
      "type": "String"
    },
    "virtualNetworks_RG_vnet_name": {
      "defaultValue": "RG-vnet",
      "type": "String"
    },
    "virtualMachineScaleSets_VMSS1_name": {
      "defaultValue": "VMSS1",
      "type": "String"
    },
    "virtualMachines_VMSS1_aa810807_name": {
      "defaultValue": "VMSS1_aa810807",
      "type": "String"
    },
    "virtualMachines_VMSS1_b5831fdb_name": {
      "defaultValue": "VMSS1_b5831fdb",
      "type": "String"
    },
    "publicIPAddresses_alb_publicip_name": {
      "defaultValue": "alb-publicip",
      "type": "String"
    },
    "autoscalesettings_VMSS1_Autoscale_123_name": {
      "defaultValue": "VMSS1-Autoscale-123",
      "type": "String"
    },
    "networkInterfaces_RG_vnet_nic01_39fb537d_name": {
      "defaultValue": "RG-vnet-nic01-39fb537d",
      "type": "String"
    },
    "networkInterfaces_RG_vnet_nic01_c5569f30_name": {
      "defaultValue": "RG-vnet-nic01-c5569f30",
      "type": "String"
    },
    "networkSecurityGroups_basicNsgRG_vnet_nic01_name": {
      "defaultValue": "basicNsgRG-vnet-nic01",
      "type": "String"
    },
    "publicIPAddresses_publicIp_RG_vnet_nic01_39fb537d_name": {
      "defaultValue": "publicIp-RG-vnet-nic01-39fb537d",
      "type": "String"
    },
    "publicIPAddresses_publicIp_RG_vnet_nic01_c5569f30_name": {
      "defaultValue": "publicIp-RG-vnet-nic01-c5569f30",
      "type": "String"
    }
  },
  "variables": {},
  "resources": [
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2024-01-01",
      "name": "[parameters('networkSecurityGroups_basicNsgRG_vnet_nic01_name')]",
      "location": "eastus",
      "properties": {
        "securityRules": [
          {
            "name": "Tcp",
            "id": "[resourceId('Microsoft.Network/networkSecurityGroups/securityRules', parameters('networkSecurityGroups_basicNsgRG_vnet_nic01_name'), 'Tcp')]",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "80",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 300,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2024-01-01",
      "name": "[parameters('publicIPAddresses_alb_publicip_name')]",
      "location": "eastus",
      "sku": {
        "name": "Standard",
        "tier": "Regional"
      },
      "zones": [
        "1",
        "2",
        "3"
      ],
      "properties": {
        "ipAddress": "48.216.134.117",
        "publicIPAddressVersion": "IPv4",
        "publicIPAllocationMethod": "Static",
        "idleTimeoutInMinutes": 15,
        "ipTags": []
      }
    },
    {
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2024-01-01",
      "name": "[parameters('publicIPAddresses_publicIp_RG_vnet_nic01_39fb537d_name')]",
      "location": "eastus",
      "sku": {
        "name": "Standard",
        "tier": "Regional"
      },
      "zones": [
        "1"
      ],
      "properties": {
        "ipAddress": "20.127.165.12",
        "publicIPAddressVersion": "IPv4",
        "publicIPAllocationMethod": "Static",
        "idleTimeoutInMinutes": 15,
        "ipTags": []
      }
    },
    {
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2024-01-01",
      "name": "[parameters('publicIPAddresses_publicIp_RG_vnet_nic01_c5569f30_name')]",
      "location": "eastus",
      "sku": {
        "name": "Standard",
        "tier": "Regional"
      },
      "zones": [
        "2"
      ],
      "properties": {
        "ipAddress": "52.224.240.212",
        "publicIPAddressVersion": "IPv4",
        "publicIPAllocationMethod": "Static",
        "idleTimeoutInMinutes": 15,
        "ipTags": []
      }
    },
    {
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2024-01-01",
      "name": "[parameters('virtualNetworks_RG_vnet_name')]",
      "location": "eastus",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "10.0.0.0/16"
          ]
        },
        "subnets": [
          {
            "name": "default",
            "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_RG_vnet_name'), 'default')]",
            "properties": {
              "addressPrefix": "10.0.0.0/20",
              "delegations": [],
              "privateEndpointNetworkPolicies": "Disabled",
              "privateLinkServiceNetworkPolicies": "Enabled"
            },
            "type": "Microsoft.Network/virtualNetworks/subnets"
          }
        ],
        "virtualNetworkPeerings": [],
        "enableDdosProtection": false
      }
    },
    {
      "type": "Microsoft.Compute/virtualMachineScaleSets/virtualMachines",
      "apiVersion": "2024-07-01",
      "name": "[concat(parameters('virtualMachineScaleSets_VMSS1_name'), '/', parameters('virtualMachineScaleSets_VMSS1_name'), '_aa810807')]",
      "location": "eastus",
      "dependsOn": [
        "[resourceId('Microsoft.Compute/virtualMachineScaleSets', parameters('virtualMachineScaleSets_VMSS1_name'))]"
      ],
      "zones": [
        "2"
      ]
    },
    {
      "type": "Microsoft.Compute/virtualMachineScaleSets/virtualMachines",
      "apiVersion": "2024-07-01",
      "name": "[concat(parameters('virtualMachineScaleSets_VMSS1_name'), '/', parameters('virtualMachineScaleSets_VMSS1_name'), '_b5831fdb')]",
      "location": "eastus",
      "dependsOn": [
        "[resourceId('Microsoft.Compute/virtualMachineScaleSets', parameters('virtualMachineScaleSets_VMSS1_name'))]"
      ],
      "zones": [
        "1"
      ]
    },
    {
      "type": "microsoft.insights/autoscalesettings",
      "apiVersion": "2022-10-01",
      "name": "[parameters('autoscalesettings_VMSS1_Autoscale_123_name')]",
      "location": "eastus",
      "dependsOn": [
        "[resourceId('Microsoft.Compute/virtualMachineScaleSets', parameters('virtualMachineScaleSets_VMSS1_name'))]"
      ],
      "properties": {
        "profiles": [
          {
            "name": "Auto created default scale condition",
            "capacity": {
              "minimum": "2",
              "maximum": "3",
              "default": "2"
            },
            "rules": [
              {
                "metricTrigger": {
                  "metricName": "Percentage CPU",
                  "metricNamespace": "microsoft.compute/virtualmachinescalesets",
                  "metricResourceUri": "[resourceId('Microsoft.Compute/virtualMachineScaleSets', parameters('virtualMachineScaleSets_VMSS1_name'))]",
                  "timeGrain": "PT1M",
                  "statistic": "Average",
                  "timeWindow": "PT5M",
                  "timeAggregation": "Average",
                  "operator": "GreaterThan",
                  "threshold": 50,
                  "dimensions": [],
                  "dividePerInstance": false
                },
                "scaleAction": {
                  "direction": "Increase",
                  "type": "ChangeCount",
                  "value": "1",
                  "cooldown": "PT5M"
                }
              }
            ]
          }
        ],
        "enabled": true,
        "name": "[parameters('autoscalesettings_VMSS1_Autoscale_123_name')]",
        "targetResourceUri": "[resourceId('Microsoft.Compute/virtualMachineScaleSets', parameters('virtualMachineScaleSets_VMSS1_name'))]",
        "notifications": [],
        "predictiveAutoscalePolicy": {
          "scaleMode": "Disabled"
        }
      }
    },
    {
      "type": "Microsoft.Network/loadBalancers",
      "apiVersion": "2024-01-01",
      "name": "[parameters('loadBalancers_alb_name')]",
      "location": "eastus",
      "dependsOn": [
        "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_alb_publicip_name'))]"
      ],
      "sku": {
        "name": "Standard",
        "tier": "Regional"
      },
      "properties": {
        "frontendIPConfigurations": [
          {
            "name": "[concat(parameters('loadBalancers_alb_name'), '-frontendconfig01')]",
            "id": "[concat(resourceId('Microsoft.Network/loadBalancers', parameters('loadBalancers_alb_name')), concat('/frontendIPConfigurations/', parameters('loadBalancers_alb_name'), '-frontendconfig01'))]",
            "properties": {
              "privateIPAllocationMethod": "Dynamic",
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_alb_publicip_name'))]"
              }
            }
          }
        ],
        "backendAddressPools": [
          {
            "name": "bepool",
            "id": "[resourceId('Microsoft.Network/loadBalancers/backendAddressPools', parameters('loadBalancers_alb_name'), 'bepool')]",
            "properties": {
              "loadBalancerBackendAddresses": [
                {
                  "name": "RG_RG-vnet-nic01-39fb537dRG-vnet-nic01-defaultIpConfiguration",
                  "properties": {}
                },
                {
                  "name": "RG_RG-vnet-nic01-c5569f30RG-vnet-nic01-defaultIpConfiguration",
                  "properties": {}
                }
              ]
            }
          }
        ],
        "loadBalancingRules": [
          {
            "name": "[concat(parameters('loadBalancers_alb_name'), '-lbrule01')]",
            "id": "[concat(resourceId('Microsoft.Network/loadBalancers', parameters('loadBalancers_alb_name')), concat('/loadBalancingRules/', parameters('loadBalancers_alb_name'), '-lbrule01'))]",
            "properties": {
              "frontendIPConfiguration": {
                "id": "[concat(resourceId('Microsoft.Network/loadBalancers', parameters('loadBalancers_alb_name')), concat('/frontendIPConfigurations/', parameters('loadBalancers_alb_name'), '-frontendconfig01'))]"
              },
              "frontendPort": 80,
              "backendPort": 80,
              "enableFloatingIP": false,
              "idleTimeoutInMinutes": 15,
              "protocol": "Tcp",
              "enableTcpReset": false,
              "loadDistribution": "Default",
              "disableOutboundSnat": true,
              "backendAddressPool": {
                "id": "[resourceId('Microsoft.Network/loadBalancers/backendAddressPools', parameters('loadBalancers_alb_name'), 'bepool')]"
              },
              "backendAddressPools": [
                {
                  "id": "[resourceId('Microsoft.Network/loadBalancers/backendAddressPools', parameters('loadBalancers_alb_name'), 'bepool')]"
                }
              ],
              "probe": {
                "id": "[concat(resourceId('Microsoft.Network/loadBalancers', parameters('loadBalancers_alb_name')), concat('/probes/', parameters('loadBalancers_alb_name'), '-probe01'))]"
              }
            }
          }
        ],
        "probes": [
          {
            "name": "[concat(parameters('loadBalancers_alb_name'), '-probe01')]",
            "id": "[concat(resourceId('Microsoft.Network/loadBalancers', parameters('loadBalancers_alb_name')), concat('/probes/', parameters('loadBalancers_alb_name'), '-probe01'))]",
            "properties": {
              "protocol": "Tcp",
              "port": 80,
              "intervalInSeconds": 15,
              "numberOfProbes": 2,
              "probeThreshold": 1,
              "noHealthyBackendsBehavior": "AllProbedDown"
            }
          }
        ],
        "inboundNatRules": [
          {
            "name": "[concat(parameters('loadBalancers_alb_name'), '-natRule01')]",
            "id": "[resourceId('Microsoft.Network/loadBalancers/inboundNatRules', parameters('loadBalancers_alb_name'), concat(parameters('loadBalancers_alb_name'), '-natRule01'))]",
            "properties": {
              "frontendIPConfiguration": {
                "id": "[concat(resourceId('Microsoft.Network/loadBalancers', parameters('loadBalancers_alb_name')), concat('/frontendIPConfigurations/', parameters('loadBalancers_alb_name'), '-frontendconfig01'))]"
              },
              "frontendPort": 0,
              "backendPort": 22,
              "enableFloatingIP": false,
              "idleTimeoutInMinutes": 4,
              "protocol": "Tcp",
              "enableTcpReset": false,
              "frontendPortRangeStart": 50000,
              "frontendPortRangeEnd": 53599,
              "backendAddressPool": {
                "id": "[resourceId('Microsoft.Network/loadBalancers/backendAddressPools', parameters('loadBalancers_alb_name'), 'bepool')]"
              }
            }
          }
        ],
        "outboundRules": [],
        "inboundNatPools": []
      }
    },
    {
      "type": "Microsoft.Network/loadBalancers/backendAddressPools",
      "apiVersion": "2024-01-01",
      "name": "[concat(parameters('loadBalancers_alb_name'), '/bepool')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/loadBalancers', parameters('loadBalancers_alb_name'))]"
      ],
      "properties": {
        "loadBalancerBackendAddresses": [
          {
            "name": "RG_RG-vnet-nic01-39fb537dRG-vnet-nic01-defaultIpConfiguration",
            "properties": {}
          },
          {
            "name": "RG_RG-vnet-nic01-c5569f30RG-vnet-nic01-defaultIpConfiguration",
            "properties": {}
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "apiVersion": "2024-01-01",
      "name": "[concat(parameters('networkSecurityGroups_basicNsgRG_vnet_nic01_name'), '/Tcp')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_basicNsgRG_vnet_nic01_name'))]"
      ],
      "properties": {
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "80",
        "sourceAddressPrefix": "*",
        "destinationAddressPrefix": "*",
        "access": "Allow",
        "priority": 300,
        "direction": "Inbound",
        "sourcePortRanges": [],
        "destinationPortRanges": [],
        "sourceAddressPrefixes": [],
        "destinationAddressPrefixes": []
      }
    },
    {
      "type": "Microsoft.Network/virtualNetworks/subnets",
      "apiVersion": "2024-01-01",
      "name": "[concat(parameters('virtualNetworks_RG_vnet_name'), '/default')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_RG_vnet_name'))]"
      ],
      "properties": {
        "addressPrefix": "10.0.0.0/20",
        "delegations": [],
        "privateEndpointNetworkPolicies": "Disabled",
        "privateLinkServiceNetworkPolicies": "Enabled"
      }
    },
    {
      "type": "Microsoft.Compute/virtualMachines",
      "apiVersion": "2024-07-01",
      "name": "[parameters('virtualMachines_VMSS1_aa810807_name')]",
      "location": "eastus",
      "dependsOn": [
        "[resourceId('Microsoft.Compute/virtualMachineScaleSets', parameters('virtualMachineScaleSets_VMSS1_name'))]",
        "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_RG_vnet_nic01_c5569f30_name'))]"
      ],
      "tags": {
        "VirtualMachineProfileTimeCreated": "10/27/2024 12:54:40 AM +00:00"
      },
      "zones": [
        "2"
      ],
      "properties": {
        "hardwareProfile": {
          "vmSize": "Standard_D2s_v3"
        },
        "virtualMachineScaleSet": {
          "id": "[resourceId('Microsoft.Compute/virtualMachineScaleSets', parameters('virtualMachineScaleSets_VMSS1_name'))]"
        },
        "additionalCapabilities": {
          "hibernationEnabled": false
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "canonical",
            "offer": "ubuntu-24_04-lts",
            "sku": "server",
            "version": "latest"
          },
          "osDisk": {
            "osType": "Linux",
            "name": "[concat(parameters('virtualMachines_VMSS1_aa810807_name'), '_OsDisk_1_7fcd8ed5e77c4ff88aaa7f3808526e6d')]",
            "createOption": "FromImage",
            "caching": "ReadWrite",
            "managedDisk": {
              "id": "[resourceId('Microsoft.Compute/disks', concat(parameters('virtualMachines_VMSS1_aa810807_name'), '_OsDisk_1_7fcd8ed5e77c4ff88aaa7f3808526e6d'))]"
            },
            "deleteOption": "Delete"
          },
          "dataDisks": [],
          "diskControllerType": "SCSI"
        },
        "osProfile": {
          "computerName": "vmss1o7kdNPZU2H",
          "adminUsername": "VmssAdmin",
          "linuxConfiguration": {
            "disablePasswordAuthentication": false,
            "provisionVMAgent": true,
            "patchSettings": {
              "patchMode": "ImageDefault",
              "assessmentMode": "ImageDefault"
            }
          },
          "secrets": [],
          "allowExtensionOperations": true,
          "requireGuestProvisionSignal": true
        },
        "securityProfile": {
          "uefiSettings": {
            "secureBootEnabled": true,
            "vTpmEnabled": true
          },
          "securityType": "TrustedLaunch"
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_RG_vnet_nic01_c5569f30_name'))]",
              "properties": {
                "primary": true,
                "deleteOption": "Delete"
              }
            }
          ]
        },
        "diagnosticsProfile": {
          "bootDiagnostics": {
            "enabled": true
          }
        }
      }
    },
    {
      "type": "Microsoft.Compute/virtualMachines",
      "apiVersion": "2024-07-01",
      "name": "[parameters('virtualMachines_VMSS1_b5831fdb_name')]",
      "location": "eastus",
      "dependsOn": [
        "[resourceId('Microsoft.Compute/virtualMachineScaleSets', parameters('virtualMachineScaleSets_VMSS1_name'))]",
        "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_RG_vnet_nic01_39fb537d_name'))]"
      ],
      "tags": {
        "VirtualMachineProfileTimeCreated": "10/27/2024 12:54:40 AM +00:00"
      },
      "zones": [
        "1"
      ],
      "properties": {
        "hardwareProfile": {
          "vmSize": "Standard_D2s_v3"
        },
        "virtualMachineScaleSet": {
          "id": "[resourceId('Microsoft.Compute/virtualMachineScaleSets', parameters('virtualMachineScaleSets_VMSS1_name'))]"
        },
        "additionalCapabilities": {
          "hibernationEnabled": false
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "canonical",
            "offer": "ubuntu-24_04-lts",
            "sku": "server",
            "version": "latest"
          },
          "osDisk": {
            "osType": "Linux",
            "name": "[concat(parameters('virtualMachines_VMSS1_b5831fdb_name'), '_OsDisk_1_b234059e48554be78325349391a9b6e2')]",
            "createOption": "FromImage",
            "caching": "ReadWrite",
            "managedDisk": {
              "id": "[resourceId('Microsoft.Compute/disks', concat(parameters('virtualMachines_VMSS1_b5831fdb_name'), '_OsDisk_1_b234059e48554be78325349391a9b6e2'))]"
            },
            "deleteOption": "Delete"
          },
          "dataDisks": [],
          "diskControllerType": "SCSI"
        },
        "osProfile": {
          "computerName": "vmss1o7kdKO1D0L",
          "adminUsername": "VmssAdmin",
          "linuxConfiguration": {
            "disablePasswordAuthentication": false,
            "provisionVMAgent": true,
            "patchSettings": {
              "patchMode": "ImageDefault",
              "assessmentMode": "ImageDefault"
            }
          },
          "secrets": [],
          "allowExtensionOperations": true,
          "requireGuestProvisionSignal": true
        },
        "securityProfile": {
          "uefiSettings": {
            "secureBootEnabled": true,
            "vTpmEnabled": true
          },
          "securityType": "TrustedLaunch"
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_RG_vnet_nic01_39fb537d_name'))]",
              "properties": {
                "primary": true,
                "deleteOption": "Delete"
              }
            }
          ]
        },
        "diagnosticsProfile": {
          "bootDiagnostics": {
            "enabled": true
          }
        }
      }
    },
    {
      "type": "Microsoft.Network/loadBalancers/inboundNatRules",
      "apiVersion": "2024-01-01",
      "name": "[concat(parameters('loadBalancers_alb_name'), '/', parameters('loadBalancers_alb_name'), '-natRule01')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/loadBalancers', parameters('loadBalancers_alb_name'))]",
        "[resourceId('Microsoft.Network/loadBalancers/backendAddressPools', parameters('loadBalancers_alb_name'), 'bepool')]"
      ],
      "properties": {
        "frontendIPConfiguration": {
          "id": "[concat(resourceId('Microsoft.Network/loadBalancers', parameters('loadBalancers_alb_name')), '/frontendIPConfigurations/alb-frontendconfig01')]"
        },
        "frontendPort": 0,
        "backendPort": 22,
        "enableFloatingIP": false,
        "idleTimeoutInMinutes": 4,
        "protocol": "Tcp",
        "enableTcpReset": false,
        "frontendPortRangeStart": 50000,
        "frontendPortRangeEnd": 53599,
        "backendAddressPool": {
          "id": "[resourceId('Microsoft.Network/loadBalancers/backendAddressPools', parameters('loadBalancers_alb_name'), 'bepool')]"
        }
      }
    },
    {
      "type": "Microsoft.Compute/virtualMachineScaleSets",
      "apiVersion": "2024-07-01",
      "name": "[parameters('virtualMachineScaleSets_VMSS1_name')]",
      "location": "eastus",
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_RG_vnet_name'), 'default')]",
        "[resourceId('Microsoft.Network/loadBalancers/backendAddressPools', parameters('loadBalancers_alb_name'), 'bepool')]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_basicNsgRG_vnet_nic01_name'))]"
      ],
      "sku": {
        "name": "Standard_D2s_v3",
        "tier": "Standard",
        "capacity": 2
      },
      "zones": [
        "1",
        "2"
      ],
      "properties": {
        "singlePlacementGroup": false,
        "orchestrationMode": "Flexible",
        "upgradePolicy": {
          "mode": "Manual"
        },
        "scaleInPolicy": {
          "rules": [
            "Default"
          ],
          "forceDeletion": false
        },
        "virtualMachineProfile": {
          "osProfile": {
            "computerNamePrefix": "vmss1o7kd",
            "adminUsername": "VmssAdmin",
            "linuxConfiguration": {
              "disablePasswordAuthentication": false,
              "provisionVMAgent": true,
              "patchSettings": {
                "patchMode": "ImageDefault",
                "assessmentMode": "ImageDefault"
              }
            },
            "secrets": [],
            "allowExtensionOperations": true,
            "requireGuestProvisionSignal": true
          },
          "storageProfile": {
            "osDisk": {
              "osType": "Linux",
              "createOption": "FromImage",
              "caching": "ReadWrite",
              "managedDisk": {
                "storageAccountType": "Premium_LRS"
              },
              "deleteOption": "Delete",
              "diskSizeGB": 30
            },
            "imageReference": {
              "publisher": "canonical",
              "offer": "ubuntu-24_04-lts",
              "sku": "server",
              "version": "latest"
            },
            "diskControllerType": "SCSI"
          },
          "networkProfile": {
            "networkApiVersion": "2020-11-01",
            "networkInterfaceConfigurations": [
              {
                "name": "RG-vnet-nic01",
                "properties": {
                  "primary": true,
                  "enableAcceleratedNetworking": false,
                  "disableTcpStateTracking": false,
                  "enableIPForwarding": false,
                  "auxiliaryMode": "None",
                  "auxiliarySku": "None",
                  "deleteOption": "Delete",
                  "ipConfigurations": [
                    {
                      "name": "RG-vnet-nic01-defaultIpConfiguration",
                      "properties": {
                        "privateIPAddressVersion": "IPv4",
                        "subnet": {
                          "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_RG_vnet_name'), 'default')]"
                        },
                        "primary": true,
                        "publicIPAddressConfiguration": {
                          "name": "publicIp-RG-vnet-nic01",
                          "properties": {
                            "idleTimeoutInMinutes": 15,
                            "ipTags": [],
                            "publicIPAddressVersion": "IPv4"
                          }
                        },
                        "applicationSecurityGroups": [],
                        "loadBalancerBackendAddressPools": [
                          {
                            "id": "[resourceId('Microsoft.Network/loadBalancers/backendAddressPools', parameters('loadBalancers_alb_name'), 'bepool')]"
                          }
                        ],
                        "applicationGatewayBackendAddressPools": []
                      }
                    }
                  ],
                  "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_basicNsgRG_vnet_nic01_name'))]"
                  },
                  "dnsSettings": {
                    "dnsServers": []
                  }
                }
              }
            ]
          },
          "diagnosticsProfile": {
            "bootDiagnostics": {
              "enabled": true
            }
          },
          "extensionProfile": {
            "extensions": []
          },
          "securityProfile": {
            "uefiSettings": {
              "secureBootEnabled": true,
              "vTpmEnabled": true
            },
            "securityType": "TrustedLaunch"
          }
        },
        "additionalCapabilities": {
          "hibernationEnabled": false
        },
        "zoneBalance": false,
        "platformFaultDomainCount": 1,
        "constrainedMaximumCapacity": false
      }
    },
    {
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2024-01-01",
      "name": "[parameters('networkInterfaces_RG_vnet_nic01_39fb537d_name')]",
      "location": "eastus",
      "dependsOn": [
        "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_publicIp_RG_vnet_nic01_39fb537d_name'))]",
        "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_RG_vnet_name'), 'default')]",
        "[resourceId('Microsoft.Network/loadBalancers/backendAddressPools', parameters('loadBalancers_alb_name'), 'bepool')]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_basicNsgRG_vnet_nic01_name'))]"
      ],
      "tags": {
        "fastpathenabled": "True"
      },
      "kind": "Regular",
      "properties": {
        "ipConfigurations": [
          {
            "name": "RG-vnet-nic01-defaultIpConfiguration",
            "id": "[concat(resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_RG_vnet_nic01_39fb537d_name')), '/ipConfigurations/RG-vnet-nic01-defaultIpConfiguration')]",
            "type": "Microsoft.Network/networkInterfaces/ipConfigurations",
            "properties": {
              "privateIPAddress": "10.0.0.4",
              "privateIPAllocationMethod": "Dynamic",
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_publicIp_RG_vnet_nic01_39fb537d_name'))]",
                "properties": {
                  "deleteOption": "Delete"
                }
              },
              "subnet": {
                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_RG_vnet_name'), 'default')]"
              },
              "primary": true,
              "privateIPAddressVersion": "IPv4",
              "loadBalancerBackendAddressPools": [
                {
                  "id": "[resourceId('Microsoft.Network/loadBalancers/backendAddressPools', parameters('loadBalancers_alb_name'), 'bepool')]"
                }
              ]
            }
          }
        ],
        "dnsSettings": {
          "dnsServers": []
        },
        "enableAcceleratedNetworking": false,
        "enableIPForwarding": false,
        "disableTcpStateTracking": false,
        "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_basicNsgRG_vnet_nic01_name'))]"
        },
        "nicType": "Standard",
        "auxiliaryMode": "None",
        "auxiliarySku": "None"
      }
    },
    {
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2024-01-01",
      "name": "[parameters('networkInterfaces_RG_vnet_nic01_c5569f30_name')]",
      "location": "eastus",
      "dependsOn": [
        "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_publicIp_RG_vnet_nic01_c5569f30_name'))]",
        "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_RG_vnet_name'), 'default')]",
        "[resourceId('Microsoft.Network/loadBalancers/backendAddressPools', parameters('loadBalancers_alb_name'), 'bepool')]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_basicNsgRG_vnet_nic01_name'))]"
      ],
      "tags": {
        "fastpathenabled": "True"
      },
      "kind": "Regular",
      "properties": {
        "ipConfigurations": [
          {
            "name": "RG-vnet-nic01-defaultIpConfiguration",
            "id": "[concat(resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_RG_vnet_nic01_c5569f30_name')), '/ipConfigurations/RG-vnet-nic01-defaultIpConfiguration')]",
            "type": "Microsoft.Network/networkInterfaces/ipConfigurations",
            "properties": {
              "privateIPAddress": "10.0.0.5",
              "privateIPAllocationMethod": "Dynamic",
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_publicIp_RG_vnet_nic01_c5569f30_name'))]",
                "properties": {
                  "deleteOption": "Delete"
                }
              },
              "subnet": {
                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_RG_vnet_name'), 'default')]"
              },
              "primary": true,
              "privateIPAddressVersion": "IPv4",
              "loadBalancerBackendAddressPools": [
                {
                  "id": "[resourceId('Microsoft.Network/loadBalancers/backendAddressPools', parameters('loadBalancers_alb_name'), 'bepool')]"
                }
              ]
            }
          }
        ],
        "dnsSettings": {
          "dnsServers": []
        },
        "enableAcceleratedNetworking": false,
        "enableIPForwarding": false,
        "disableTcpStateTracking": false,
        "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_basicNsgRG_vnet_nic01_name'))]"
        },
        "nicType": "Standard",
        "auxiliaryMode": "None",
        "auxiliarySku": "None"
      }
    }
  ]
}
